[package]
name = "rsnova"
version = "0.2.0"
authors = ["yinqiwen <yinqiwen@gmail.com>"]
edition = "2018"

[features]

[lib]
name = "rsnova"

[[bin]]
name = "rsnova"
path = "src/bin/main.rs"

[dependencies]
clap = "~2.33"
log = "0.4"
flexi_logger = "0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
tokio = { version = "0.2.0",  features = ["full"] }
bytes = "0.5"
futures = "0.3"
httparse = "1.0"
byteorder = "1"
nom = "^4.2"
bincode = "1.1"
lazy_static = "1.3.0"
url = "1.7"
rand = "0.6"
skip32 = "1.0"
nix = "0.14.1"
cfg-if = "0.1"
twoway = "0.2"
unicase = "2.4"
ring = "0.14"
crc = "^1.0.0"
regex = "1"
# tungstenite = "0.10.1"
# tokio-tungstenite = { version = "*",  features = ["stream"] }




