[package]
name = "rsnova"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rsnova"
path = "src/main.rs"


[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
veil = "0.1"
tokio = { version = "1.0", features = ["full"] }
# quinn = "0.10"
rcgen = "0.11"
rustls = "0.21"
rustls-pemfile = "1.0.2"
rustls-native-certs = "0.6.1"
anyhow = "1.0"
url = "2.5.0"
bincode = "2.0.0-rc.3"
# yamux = "0.13.1"
tokio-rustls = "0.23.4"
tokio-util = { version = "0.7", features = ["compat"] }
pki-types = { package = "rustls-pki-types", version = "1" }
httparse = "1.8.0"
bytes = "1"
futures = "0.3"
metrics = "0.21"
metrics-util = "0.15"
time = "0.3"
s2n-quic = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
aws-lc-rs = { version = "1.5", features = ["bindgen"] }
