[package]
name = "rsnova"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rsnova"
path = "src/main.rs"


[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
veil = "0.1"
tokio = { version = "1.0", features = ["full"] }
rcgen = "0.11"
rustls = { version = "0.22" }
rustls-pemfile = "2"
# rustls-native-certs = "0.7"
anyhow = "1.0"
url = "2.5.0"
bincode = "2.0.0-rc.3"
tokio-rustls = "0.25.0"
tokio-util = { version = "0.7", features = ["compat"] }
# pki-types = { package = "rustls-pki-types", version = "1" }
httparse = "1.8.0"
bytes = "1"
futures = "0.3"
metrics = "0.21"
metrics-util = "0.15"
time = "0.3"
pki-types = { package = "rustls-pki-types", version = "1" }
once_cell = "1.19.0"
lockfree-object-pool = "0.1"
s2n-quic = { version = "1", optional = true }
quinn = { version = "0.10", optional = true }


[target.'cfg(not(target_os = "windows"))'.dependencies]
aws-lc-rs = { version = "1.5", features = ["bindgen"], optional = true }

[features]
default = ["s2n_quic"]
s2n_quic = ["dep:s2n-quic", "dep:aws-lc-rs"]
quinn = ["dep:quinn"]
